--- a/scss/header.scss
+++ b/scss/header.scss
@@ -345,3 +345,135 @@
     }
 
 }
+
+/*+-+-+-+-Estilos hasta 768px-+--+-+-+-*/
+
+        /*++++Index++++*/
+
+
+        @media screen and (min-width: 1024px) {
+
+
+            .headerIndex{
+                border: 15px;
+                flex-direction: row;
+                justify-content: space-between;
+                margin: 12px;
+                display: grid;
+                grid-template-areas: 
+                    "sectionTecnico sectionPresentacion"
+                    "sectionTecnico botonStart"
+                    "sectionParrafo sectionParrafo"
+                    "seleccionDeDispositivo seleccionDeDispositivo"
+                    ;
+        
+                .sectionTecnico{
+                    grid-area: sectionTecnico;
+                    padding-left: 3rem;
+
+                    .tecnico {
+                        height: 50rem;
+                        width: 29rem;
+                    }
+                }
+        
+                .sectionPresentacion{
+                    grid-area: sectionPresentacion;
+                    padding-top: 3rem;
+                    padding-left: 2rem;
+        
+                    h1{
+                        font-size: 2.5rem;
+                    }
+                }
+        
+                .sectionParrafo{
+                    grid-area: sectionParrafo;
+                    padding-top: 8rem;
+                    padding-bottom: 2rem;
+                    padding-left: 2rem;
+        
+                    #bottom{
+                            font-size: 3rem;
+                        } 
+                }
+        
+                .sectionFlechas {
+                    grid-area: sectionFlechas;
+                    display: none;
+                    
+                }
+        
+                .seleccionDeDispositivo{
+                    grid-area: seleccionDeDispositivo;
+                    padding-top: 3rem;
+                    padding-left: 4.7rem;
+                    font-size: 2.2rem;
+                
+                }
+                .botonStart{
+
+                    grid-area: botonStart;
+                    display:block;
+                    padding-left: 3rem;
+                    padding-top: 0rem;
+
+                    
+                    img{
+                        height: 15rem;
+                        width: 13rem;
+                        margin-top: -23rem;
+                        margin-left: 5rem;
+                        transition: height 1s, width 1s;
+                    }
+                    .botonComenzar:hover{
+                        height: 19rem;
+                        width: 17rem;
+                    }
+                    
+
+                }
+            }
+        }
+
+@media screen and (min-width: 1750px){
+    
+
+    .headerIndex{
+        .sectionTecnico{
+            grid-area: sectionTecnico;
+            padding-left: 8rem;
+        
+            .tecnico {
+                height: 59rem;
+                width: 35rem;
+            }
+        }
+
+        .botonStart{
+
+            display:block;
+            padding-left: 7rem;
+     
+            img{
+                height: 18rem;
+                width: 15rem;
+                margin-top: -23rem;
+                margin-left: 8rem;
+                transition: height 1s, width 1s;
+            }
+            .botonComenzar:hover{
+                height: 26rem;
+                width: 22rem;
+            } 
+        }
+
+        .seleccionDeDispositivo{
+
+            padding-top: 3rem;
+            padding-left: 12rem;
+            font-size: 3rem;
+        
+        }
+    }
+}
