--- a/scss/mainContent.scss
+++ b/scss/mainContent.scss
@@ -482,11 +482,10 @@
         grid-template-rows: 5fr 5fr 5fr;
 
         img{
-                transition: height 0.5s, width 0.5s;
+                transition: transform 0.5s;
             }
         img:hover{
-            height: 18rem;
-            width: 18rem;
+            transform: scale(1.2) ;
         }
 
         .aireAcondicionado {
