pequeñas modificaciones al index y a la descripcion

--- a/scss/body.scss
+++ b/scss/body.scss
@@ -16,8 +16,8 @@ body {
     
     background-color: #0f0f0f;
     background-image: url(../public/image/fondoherramientas2.png); 
-    background-repeat: repeat;
-    background-size: 26rem;
+    position: absolute;
+    background-size: 40rem;
     justify-content: center;
     
 }
