--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -1,4 +1,4 @@
-$color-texto-gral: #ffffffec;
+$color-texto-gral: #ebdddd;
 $color-texto-secundario: #000000;
 $color-sombras-index: #ff5e00;
 $color-sombras-notebook: #ff0000;
