--- a/css/main.css
+++ b/css/main.css
@@ -1,27 +1,27 @@
 /*Maps*/
 .titulo-aireAcondicionado {
-  color: #ffffffec;
+  color: #ebdddd;
   text-shadow: 3px 3px 7px #ff5e00;
   font-size: 2.5rem;
   text-align: center;
   padding: 15px; }
 
 .titulo-pcDesktop {
-  color: #ffffffec;
+  color: #ebdddd;
   text-shadow: 3px 3px 7px #594bdb;
   font-size: 2.5rem;
   text-align: center;
   padding: 15px; }
 
 .titulo-notebook {
-  color: #ffffffec;
+  color: #ebdddd;
   text-shadow: 3px 3px 7px #ff0000;
   font-size: 2.5rem;
   text-align: center;
   padding: 15px; }
 
 .titulo-redesSociales {
-  color: #ffffffec;
+  color: #ebdddd;
   text-shadow: 3px 3px 7px #1ead0b;
   font-size: 2.5rem;
   text-align: center;
@@ -69,24 +69,24 @@ nav {
       height: 23rem;
       width: 13rem; }
   .headerIndex .sectionPresentacion {
-    color: #ffffffec;
+    color: #ebdddd;
     font-family: 'Fredoka One', sans-serif;
     grid-area: sectionPresentacion;
     box-sizing: border-box;
-    text-shadow: 2px 2px 3.5px #ff5e00; }
+    text-shadow: 2px 2px 3.5px #6af8bd; }
     .headerIndex .sectionPresentacion h1 {
       font-size: 1.2rem; }
   .headerIndex .sectionParrafo {
     grid-area: sectionParrafo;
-    color: #ffffffec;
+    color: #ebdddd;
     font-family: 'Fredoka One', sans-serif;
     font-size: 1.5rem;
     box-sizing: border-box;
-    text-shadow: 2px 2px 3.5px #ff5e00;
+    text-shadow: 2px 2px 3.5px #6af8bd;
     padding-top: 6rem;
     padding-left: 1rem; }
     .headerIndex .sectionParrafo #bottom {
-      color: #ffffffec;
+      color: #ebdddd;
       font-size: 2rem; }
 
 .sectionFlechas {
@@ -102,11 +102,11 @@ nav {
 
 .seleccionDeDispositivo {
   grid-area: sectionSeleccionDispositivo;
-  color: #ffffffec;
+  color: #ebdddd;
   font-family: 'Fredoka One', sans-serif;
   font-size: 1.5rem;
   box-sizing: border-box;
-  text-shadow: 2px 2px 3.5px #ff5e00; }
+  text-shadow: 2px 2px 3.5px #6af8bd; }
 
 /*++++++++++++Estilos Header aireAcondicionado+++++++++++++*/
 .headerAire {
@@ -294,10 +294,9 @@ nav {
       width: 15rem;
       margin-top: -23rem;
       margin-left: 8rem;
-      transition: height 1s, width 1s; }
+      transition: transform 1s; }
     .headerIndex .botonStart .botonComenzar:hover {
-      height: 26rem;
-      width: 22rem; }
+      transform: scale(1.5); }
   .headerIndex .seleccionDeDispositivo {
     padding-top: 3rem;
     padding-left: 12rem;
@@ -316,8 +315,8 @@ html {
 body {
   background-color: #0f0f0f;
   background-image: url(../public/image/fondoherramientas2.png);
-  background-repeat: repeat;
-  background-size: 26rem;
+  position: absolute;
+  background-size: 40rem;
   justify-content: center; }
 
 /*++++++++++Estilos body aireAcondicionado++++++++++++*/
@@ -368,7 +367,8 @@ body {
     grid-area: proximamente3; }
 
 .producto {
-  font-size: 1.5rem;
+  font-size: 1.9rem;
+  text-shadow: 2px 2px 4px #000000;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Verdana, sans-serif;
   display: grid;
   justify-items: center;
@@ -376,11 +376,12 @@ body {
   align-content: center;
   justify-content: center;
   margin: 1.5rem;
-  background-color: #f8f8f873;
-  box-shadow: 3px 3px 5px  #b8b8b8; }
+  background-image: linear-gradient(to right, #302f2f, #dcfff1);
+  box-shadow: 3px 3px 5px  #6af8bd; }
   .producto .parrafoProducto {
-    color: #ffffffec;
-    font-size: 1.2rem; }
+    color: #ebdddd;
+    text-shadow: 2px 2px 4px #000000;
+    font-size: 1.7rem; }
   .producto .imagenes {
     margin: 2rem;
     height: 16rem;
@@ -622,7 +623,7 @@ body {
     background-color: #f0f8ff1c; }
     .mainLegales .legales li {
       font-size: 1rem;
-      color: #ffffffec; }
+      color: #ebdddd; }
 
 /*-----------------Medias Queries-------------------*/
 /*+-+-+-+-Estilos hasta 768px-+--+-+-+-*/
