Haciendo full responsive TODO el sitio

--- a/scss/body.scss
+++ b/scss/body.scss
@@ -15,9 +15,9 @@ html {
 body {
     
     background-color: #0f0f0f;
-    background-image: url(../public/image/fondoherramientas2.png); 
+   /* background-image: url(../public/image/fondoherramientas2.png); */
     position: absolute;
-    background-size: 40rem;
+    background-size: 30rem;
     justify-content: center;
     
 }
