--- a/scss/mainContent.scss
+++ b/scss/mainContent.scss
@@ -48,8 +48,8 @@
     align-content: center;
     justify-content: center;
     margin: 1.5rem;  
-    background-image: linear-gradient(to right, #302f2f,#dcfff1);
-    box-shadow: 3px 3px 5px  #6af8bd;  
+    background-image: linear-gradient(to right, #302f2f,#ccc9c9);
+    box-shadow: 3px 3px 5px  #ffffff;  
 
     .parrafoProducto {
         color: $color-texto-gral;
@@ -72,10 +72,11 @@
     
     .fallasAire {
     
-        margin: 1rem;
+        margin: 2rem;
         padding: 0.5rem;
         box-shadow: 3px 3px 7px $color-sombras-cuadros-aire; 
         background-color: #f0f8ffe5;
+        margin-bottom: 5rem;
         
             .partesAire {
                 font-size: 1rem;
@@ -105,6 +106,9 @@
         "divFalla1 divFalla2"
         "divFalla3 divFalla4"
         "divFalla5 divFalla6";
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        
 
         div {
                
@@ -112,9 +116,8 @@
             align-content: center;
             padding: 0.5rem;
             margin: 0.5rem;
-            background-color: #f8f8f89c; 
-            box-shadow: 3px 2px 15px #302d2a;   
-            
+            background-image: linear-gradient(to right, #ffffff,#9c9a9a);
+            box-shadow: 3px 3px 5px  #ffffff;   
             
                 .imagenAireGoteando { 
                     padding: 0.25rem;
@@ -125,20 +128,11 @@
                     display: flex;
                     justify-content: center;
                 }
-
-                .textArea{
-                    height: 7rem;
-                    width: 7rem;
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: center;
-                    align-items: center;
-                }
-
+ 
                 .h3Falla{
                     font-size: 1.2rem;
                 }
-        }
+            }
 
         .divFalla1{
             grid-area: divFalla1;
@@ -159,21 +153,28 @@
             grid-area: divFalla6;
         }
     }
-
+    
     .divFalla7{
         grid-area: divFalla7;
         padding: 0.5rem;
         margin: 0.5rem;
-    }
-    .botonNext {
-        padding: 0.5rem;
-        margin: 2rem;
-        height: 10rem;
-        width: 12rem;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+        
+        .textArea{
+            height: 10rem;
+            width: 15rem;
+            
+        }
+        
+        .botonNext {
+            padding: 0.5rem;
+            margin: 2rem;
+            height: 10rem;
+            width: 12rem;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
     }
 }
 
@@ -185,7 +186,7 @@
     
     .fallasNotebook {
     
-        margin: 1rem;
+        margin: 2rem;
         padding: 0.5rem;
         box-shadow: 3px 3px 7px $color-sombras-cuadros-notebook; 
         background-color: #f0f8ffe5;
@@ -218,6 +219,8 @@
         "divFalla1Note divFalla2Note"
         "divFalla3Note divFalla4Note"
         "divFalla5Note divFalla6Note";
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;  
 
         div {
                
@@ -225,9 +228,8 @@
             align-content: center;
             padding: 0.5rem;
             margin: 0.5rem;
-            background-color: #f8f8f89c; 
-            box-shadow: 3px 2px 15px #302d2a;   
-            
+            background-image: linear-gradient(to right, #ffffff,#9c9a9a);
+            box-shadow: 3px 3px 5px  #ffffff;      
             
                 .imagenNotebookNoEnciende { 
                     padding: 0.25rem;
@@ -239,69 +241,68 @@
                     justify-content: center;
                 }
 
-                .textAreaNote{
-                    height: 7rem;
-                    width: 7rem;
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: center;
-                    align-items: center;
-                }
                 .h3Falla{
-                    font-size: 1rem;
+                    font-size: 1.2rem;
                 }
+            }
+            
+            .divFalla1Note{
+                grid-area: divFalla1Note;
+            }
+            .divFalla2Note{
+                grid-area: divFalla2Note;
+            }
+            .divFalla3Note{
+                grid-area: divFalla3Note;
+            }
+            .divFalla4Note{
+                grid-area: divFalla4Note;
+            }
+            .divFalla5Note{
+                grid-area: divFalla5Note;
+            }
+            .divFalla6Note{
+                grid-area: divFalla6Note;
+            }
         }
-
-        .divFalla1Note{
-            grid-area: divFalla1Note;
+        
+        .divFalla7Note{
+            grid-area: divFalla7Note;
+            padding: 0.5rem;
+            margin: 0.5rem;
+            
+            .textAreaNote{
+                height: 10rem;
+                width: 15rem;
+                
+            }
+            
+            .botonNext {
+                padding: 0.5rem;
+                margin: 2rem;
+                height: 10rem;
+                width: 12rem;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+            }
         }
-        .divFalla2Note{
-            grid-area: divFalla2Note;
-        }
-        .divFalla3Note{
-            grid-area: divFalla3Note;
-        }
-        .divFalla4Note{
-            grid-area: divFalla4Note;
-        }
-        .divFalla5Note{
-            grid-area: divFalla5Note;
-        }
-        .divFalla6Note{
-            grid-area: divFalla6Note;
-        }
-    }
-    
-    .divFalla7Note{
-        grid-area: divFalla7Note;
-        padding: 0.5rem;
-        margin: 0.5rem;
-    }
-    .botonNext {
-        padding: 0.5rem;
-        margin: 2rem;
-        height: 10rem;
-        width: 12rem;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
 }
 
- 
 /*++++++++++++++Estilos Main pcDesktop++++++++++++*/
+
 .mainDesktop {
 
     grid-area: mainDesktop;
     
-    
     .fallasDesktop {
     
-        margin: 1rem;
+        margin: 2rem;
         padding: 0.5rem;
         box-shadow: 3px 3px 7px $color-sombras-cuadros-pcdesktop; 
         background-color: #f0f8ffe5;
+        margin-bottom: 5rem;
 
             .partesDesktop {
                 font-size: 1rem;
@@ -338,9 +339,8 @@
             align-content: center;
             padding: 0.5rem;
             margin: 0.5rem;
-            background-color: #f8f8f89c; 
-            box-shadow: 3px 2px 15px #302d2a;   
-            
+            background-image: linear-gradient(to right, #ffffff,#9c9a9a);
+            box-shadow: 3px 3px 5px  #ffffff;   
             
                 .imagenFallaDesktop { 
                     padding: 0.25rem;
@@ -352,17 +352,9 @@
                     justify-content: center;
                 }
 
-                .textAreaDesktop{
-                    height: 7rem;
-                    width: 7rem;
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: center;
-                    align-items: center;
-                }
-                .h3Falla{
-                    font-size: 1rem;
-                }
+            .h3Falla{
+                font-size: 1.2rem;
+            }
         }
 
         .divFalla1Pc{
@@ -389,16 +381,21 @@
         grid-area: divFalla7Pc;
         padding: 0.5rem;
         margin: 0.5rem;
-    }
-    .botonNext {
-        padding: 0.5rem;
-        margin: 2rem;
-        height: 10rem;
-        width: 12rem;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+       
+        .textAreaDesktop{
+            height: 10rem;
+            width: 15rem;
+        }
+        .botonNext {
+            padding: 0.5rem;
+            margin: 2rem;
+            height: 10rem;
+            width: 12rem;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
     }
 }
 
@@ -408,11 +405,11 @@
     color: #000000;
 
     .legales {
-        margin: 1rem 1rem;
         font-size: 1.5rem;
         margin: 1.5rem;
         box-shadow: 3px 2px 7px #1ead0b; 
         background-color: #f0f8ff1c;
+        margin-bottom: 5rem;
 
         li{
             font-size: 1rem;
@@ -425,15 +422,14 @@
 
 
 
-
-
-/*-----------------Medias Queries-------------------*/
+/*-------------------------------Medias Queries----------------------------*/
 
     /*+-+-+-+-Estilos hasta 768px-+--+-+-+-*/
 
-        /*++++Index++++*/
-@media screen and (min-width: 768px) {
-    
+ @media screen and (min-width: 768px) {
+        
+ /*++++++++Index+++++++++++++*/
+        
     .mainIndex {
         display: grid;
         grid-template-areas:
@@ -465,12 +461,185 @@
             grid-area: proximamente3;       
         }
     }
-}
 
+    /*++++++++ aireAcondicionado ++++++++++*/
+
+    .mainAire {
+        .fallasAire {
+        
+            margin: 3rem;
+    
+                .partesAire {
+                    font-size: 1.5rem;
+                }
+            
+                .subtituloMainAire {
+                    font-size: 3rem;
+                }
+    
+                .pMarcas {
+                    font-size: 1.5rem;  
+                    }
+                }
+
+        .sectionFallas {
+                
+                grid-template-areas: 
+                "divFalla1 divFalla2 divFalla3"
+                "divFalla4 divFalla5 divFalla6";
+                grid-template-columns: 1fr 1fr 1fr;
+                grid-template-rows: 1fr 1fr;
+                gap: 2rem;
+                margin: 2rem;
+        
+                div {
+                    
+                    .imagenAireGoteando { 
+                        width: 7rem;
+                        height: 7rem;
+                        margin-left: 1rem;    
+                    }
+                }   
+            } 
+
+            .divFalla7{
+                margin-left: 11rem;
+                
+                .textArea{
+                    height: 12rem;
+                    width: 18rem; 
+                }
+
+                .botonNext {
+                    margin-left: 3rem;
+                }
+            }
+        }
+
+        /*++++++++ Notebook ++++++++++*/
+
+    .mainNotebook {
+
+        .fallasNotebook {
+            margin: 3rem;
+    
+                .partesNotebook {
+                    font-size: 1.5rem;
+                }
+            
+                .subtituloMainNotebook {
+                    font-size: 3rem;
+                }
+    
+                .pMarcas {
+                    font-size: 1.5rem;  
+                    }
+                }
+
+        .sectionFallasNotebook {
+                
+                grid-template-areas: 
+                "divFalla1Note divFalla2Note divFalla3Note"
+                "divFalla4Note divFalla5Note divFalla6Note";
+                grid-template-columns: 1fr 1fr 1fr;
+                grid-template-rows: 1fr 1fr;
+                gap: 2rem;
+                margin: 2rem;
+        
+                div {
+                    .imagenNotebookNoEnciende {
+                        width: 7rem;
+                        height: 7rem;
+                        margin-left: 1rem;
+                    }
+                }   
+            } 
+
+            .divFalla7Note{
+                margin-left: 11rem;
+                
+                .textArea{
+                    height: 12rem;
+                    width: 18rem; 
+                }
+
+                .botonNext {
+                    margin-left: 3rem;
+                }
+            }
+        }
+
+        /*++++++++ pcDesktop ++++++++++*/
+
+    .mainDesktop {
+        .fallasDesktop {
+            margin: 3rem;
+    
+                .partesDesktop {
+                    font-size: 1.5rem;
+                }
+            
+                .subtituloMainDesktop {
+                    font-size: 3rem;
+                }
+    
+                .pMarcas {
+                    font-size: 1.5rem;  
+                    }
+                }
+
+        .sectionFallasDesktop {
+    
+                grid-template-areas: 
+                "divFalla1Pc divFalla2Pc divFalla3Pc"
+                "divFalla4Pc divFalla5Pc divFalla6Pc";
+                grid-template-columns: 1fr 1fr 1fr;
+                grid-template-rows: 1fr 1fr;
+                gap: 2rem;
+                margin: 2rem;
+        
+                div {
+                    .imagenFallaDesktop { 
+                        width: 7rem;
+                        height: 7rem;
+                        margin-left: 1rem; 
+                    }
+                }   
+            } 
+
+            .divFalla7Pc{
+                margin-left: 11rem;
+                
+                .textArea{
+                    height: 12rem;
+                    width: 18rem; 
+                }
+
+                .botonNext {
+                    margin-left: 3rem;
+                }
+            }
+        }
+
+/*++++++++++++++redesSociales++++++++++++*/
+
+    .mainLegales{
+        .legales {
+
+            margin: 3.5rem;
+            font-size: 1.5rem;
+
+            li{
+                font-size: 1.5rem;
+            }
+        }
+    }
+ }
 /*+-+-+-+-Estilos hasta 1024px-+--+-+-+-*/
 
-        /*++++Index++++*/
 @media screen and (min-width: 1024px) {
+    
+ /*++++++++++++++Index+++++++++++++*/
     
     .mainIndex {
         display: grid;
@@ -511,9 +680,77 @@
     
     }
 
+     /*++++++++ aireAcondicionado ++++++++++*/
+    .mainAire{
+        .divFalla7{
+           margin-left: 19rem;
+       }
+       .sectionFallas {
+            div {
+                    
+                .imagenAireGoteando { 
+                    width: 8.5rem;
+                    height: 8.5rem;
+                    margin-left: 3rem;
+                    
+                }
+            }
+        }
+    }
+     
+    /*++++++++ Notebook ++++++++++*/
+
+     .mainNotebook{
+        .divFalla7Note{
+           margin-left: 19rem;
+       }
+
+       .sectionFallasNotebook {
+            div {  
+                .imagenNotebookNoEnciende { 
+                    width: 8.5rem;
+                    height: 8.5rem;
+                    margin-left: 3rem;
+                    
+                }
+            }
+        }
+    }
+
+     /*++++++++ pcDesktop ++++++++++*/
+
+     .mainDesktop{
+        .divFalla7Pc{
+           margin-left: 19rem;
+       }
+
+       .sectionFallasDesktop {
+            div {
+                .imagenFallaDesktop { 
+                    width: 8.5rem;
+                    height: 8.5rem;
+                    margin-left: 3rem;
+                    
+                }
+            }
+        }
+    }
+
+    /*++++++++++++++redesSociales++++++++++++*/
+
+    .mainLegales{
+        .legales {
+            margin: 8rem;
+        }
+    }
+
 }
 
+/*+-+-+-+-Estilos hasta 1750px-+--+-+-+-*/
+
 @media screen and (min-width: 1750px) {
+
+/*++++++++++++++Index+++++++++++++*/
 
     .mainIndex{
         .producto{
@@ -521,4 +758,124 @@
             
         }
     }
+
+    /*++++++++ aireAcondicionado ++++++++++*/
+    .mainAire{
+        margin: 7rem;
+
+        .divFalla7{
+            margin-left: 24rem;
+            display: flex;
+            gap: 2rem;
+            
+            .textArea{
+                height: 14rem;
+                width: 20rem;
+                display: flex;
+                flex-direction: column;   
+            }
+            .botonNext {
+                height: 15rem;
+                width: 17rem;
+            }
+       }
+       .sectionFallas {
+            grid-template-areas: 
+            "divFalla1 divFalla2 divFalla3 divFalla4 divFalla5 divFalla6";
+            grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+            grid-template-rows: 1fr;
+            gap: 2rem;
+
+            div {
+                    
+                .imagenAireGoteando { 
+                    width: 9rem;
+                    height: 9rem;
+                    margin-left: 1.5rem;
+                    
+                }
+            }
+        }
+    }
+
+    /*++++++++++ Notebook +++++++++++*/
+    
+    .mainNotebook{
+        margin: 7rem;
+
+        .divFalla7Note{
+            margin-left: 24rem;
+            display: flex;
+            gap: 2rem;
+            
+            .textArea{
+                height: 14rem;
+                width: 20rem;
+                display: flex;
+                flex-direction: column;   
+            }
+            .botonNext {
+                height: 15rem;
+                width: 17rem;
+            }
+       }
+       .sectionFallasNotebook {
+            grid-template-areas: 
+            "divFalla1Note divFalla2Note divFalla3Note divFalla4Note divFalla5Note divFalla6Note";
+            grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+            grid-template-rows: 1fr;
+            gap: 2rem;
+
+            div {
+                    
+                .imagenNotebookNoEnciende { 
+                    width: 9rem;
+                    height: 9rem;
+                    margin-left: 1.5rem;
+                    
+                }
+            }
+        }
+    }
+
+     /*++++++++++ pcDesktop +++++++++++*/
+
+     .mainDesktop{
+        margin: 7rem;
+
+        .divFalla7Pc{
+            margin-left: 24rem;
+            display: flex;
+            gap: 2rem;
+            
+            .textArea{
+                height: 14rem;
+                width: 20rem;
+                display: flex;
+                flex-direction: column;   
+            }
+            .botonNext {
+                height: 15rem;
+                width: 17rem;
+            }
+       }
+       .sectionFallasDesktop {
+            grid-template-areas: 
+            "divFalla1Pc divFalla2Pc divFalla3Pc divFalla4Pc divFalla5Pc divFalla6Pc";
+            grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+            grid-template-rows: 1fr;
+            gap: 2rem;
+
+            div {
+                    
+                .imagenFallaDesktop { 
+                    width: 9rem;
+                    height: 9rem;
+                    margin-left: 1.5rem;
+                    
+                }
+            }
+        }
+    }
+
 }
