creando seccion 1.2 de Aires Acondicionados

--- a/css/main.css
+++ b/css/main.css
@@ -200,6 +200,24 @@ nav {
   .container .row4 {
     grid-area: row4; }
 
+/*++++++++++++Estilos Header serviciosAiresAcondicionados+++++++++++++*/
+.headerServiciosAires h1 {
+  color: #ebdddd;
+  text-shadow: #ff5e00 1px 3px 3px;
+  text-align: center;
+  font-size: 2.5rem;
+  margin: 0.5rem;
+  padding-top: 1rem;
+  padding-bottom: 3rem; }
+
+.headerServiciosAires h2 {
+  color: #ebdddd;
+  text-shadow: #00f7ff 1px 3px 3px;
+  font-size: 1.8rem;
+  padding-bottom: 1.5rem;
+  padding-left: 0.5rem;
+  text-align: center; }
+
 /*-----------------Medias Queries-------------------*/
 /*+-+-+-+-Estilos hasta 768px-+--+-+-+-*/
 /*++++Index++++*/
@@ -438,7 +456,7 @@ body {
   align-items: center;
   align-content: center;
   justify-content: center;
-  margin: 1.5rem;
+  margin: 1rem;
   background-image: linear-gradient(to right, #302f2f, #ccc9c9);
   box-shadow: 3px 3px 5px  #ffffff; }
   .producto .parrafoProducto {
@@ -446,9 +464,8 @@ body {
     text-shadow: 2px 2px 4px #000000;
     font-size: 1.7rem; }
   .producto .imagenes {
-    margin: 2rem;
-    height: 16rem;
-    width: 16rem; }
+    height: 14rem;
+    width: 14rem; }
 
 /*+++++++++++++Estilos Main aireAcondicionado++++++++++++++*/
 .mainAire {
@@ -682,17 +699,38 @@ body {
       font-size: 1rem;
       color: #ebdddd; }
 
+/*+++++++++++++Estilos Main serviciosAiresAcondicionados++++++++++++++*/
+.mainServiciosAires {
+  padding-bottom: 3rem; }
+  .mainServiciosAires section h3 {
+    text-align: center;
+    color: #ebdddd;
+    font-size: 2rem;
+    text-shadow: #c36a04 1px 1px 1px; }
+  .mainServiciosAires section div {
+    display: grid;
+    justify-items: center;
+    border-radius: 50%;
+    background-image: linear-gradient(to right, #53ebffef, #fd6118d0);
+    box-shadow: 3px 2px 7px #ff5e00;
+    padding: 3rem;
+    margin: 2rem;
+    margin-top: 0px; }
+    .mainServiciosAires section div img {
+      height: 9rem;
+      width: 10rem; }
+
 /*-------------------------------Medias Queries----------------------------*/
 /*+-+-+-+-Estilos hasta 768px-+--+-+-+-*/
 @media screen and (min-width: 768px) {
   /*++++++++Index+++++++++++++*/
   .mainIndex {
-    display: grid;
     grid-template-areas: "aireAcondicionado desktop" "notebook proximamente" "proximamente2 proximamente3";
     flex-direction: row;
     justify-content: space-around;
     grid-template-columns: 5fr 5fr;
-    grid-template-rows: 5fr 5fr; }
+    grid-template-rows: 5fr 5fr;
+    gap: 2rem; }
     .mainIndex .aireAcondicionado {
       grid-area: aireAcondicionado; }
     .mainIndex .desktop {
@@ -798,8 +836,8 @@ body {
     grid-template-areas: "aireAcondicionado desktop notebook" "proximamente proximamente2 proximamente3";
     flex-direction: row;
     justify-content: space-around;
-    grid-template-columns: 5fr 5fr 5fr;
-    grid-template-rows: 5fr 5fr 5fr; }
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr; }
     .mainIndex img {
       transition: transform 0.5s; }
     .mainIndex img:hover {
@@ -845,7 +883,8 @@ body {
 @media screen and (min-width: 1750px) {
   /*++++++++++++++Index+++++++++++++*/
   .mainIndex .producto {
-    padding: 4rem 1rem 4rem 1rem; }
+    padding-bottom: 2rem;
+    padding-top: 2rem; }
   /*++++++++ aireAcondicionado ++++++++++*/
   .mainAire {
     margin: 7rem; }
