--- a/scss/header.scss
+++ b/scss/header.scss
@@ -215,6 +215,28 @@
 
 }
 
+/*++++++++++++Estilos Header serviciosAiresAcondicionados+++++++++++++*/
+
+.headerServiciosAires {
+    h1{
+        color: $color-texto-gral;
+        text-shadow: #ff5e00 1px 3px 3px;
+        text-align: center;
+        font-size: 2.5rem;
+        margin: 0.5rem;
+        padding-top: 1rem;
+        padding-bottom: 3rem;
+    }
+    h2{
+        color: $color-texto-gral;
+        text-shadow: #00f7ff 1px 3px 3px;
+        font-size: 1.8rem;
+        padding-bottom: 1.5rem;
+        padding-left: 0.5rem;
+        text-align: center;
+    }
+}
+
 
 
 /*-----------------Medias Queries-------------------*/
